# Code-Assistant

./: .aiassist.md  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: DEVELOPER.md  USER_GUIDE.md
examples/: .aiassist.md
src/codeassistant/: __init__.py  main.py
src/codeassistant/cli/: commands.py  renderer.py  repl.py  status.py  theme.py
src/codeassistant/context/: compression.py  manager.py  memory.py  persistent.py  project.py  vector_store.py
src/codeassistant/core/: agent.py  config.py  engine.py  loop.py  prompts.py  subagent.py  workflow.py
src/codeassistant/llm/: adapter.py  litellm_adapter.py
src/codeassistant/tools/: base.py  code_tools.py  file_tools.py  git_tools.py  mcp_client.py  memory_tools.py  shell_tools.py  subagent_tools.py  test_tools.py  viz_tools.py
src/codeassistant/utils/: errors.py  logging.py  permissions.py
src/mahe/: __init__.py  main.py
src/mahe/cli/: commands.py  renderer.py  repl.py
src/mahe/context/: compression.py  manager.py  memory.py  persistent.py  project.py  vector_store.py
src/mahe/core/: agent.py  config.py  engine.py  loop.py  message.py  prompts.py  subagent.py  workflow.py
src/mahe/llm/: adapter.py  cache.py  litellm_adapter.py
src/mahe/tools/: code_tools.py  file_tools.py  git_tools.py  mcp_client.py  memory_tools.py  shell_tools.py  subagent_tools.py  test_tools.py
src/mahe/utils/: errors.py  logging.py  permissions.py  sandbox.py
tests/: conftest.py  helpers.py  test_agent.py  test_cli.py  test_messages.py  test_tools.py
