[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codeassistant"
version = "0.2.0"
description = "CodeAssistant - AI-powered terminal CLI programming assistant"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "rich>=13.7",
    "prompt-toolkit>=3.0",
    "litellm>=1.30",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "tiktoken>=0.7",
    "python-dotenv>=1.0",
    "chromadb>=0.5",
    "tree-sitter>=0.23",
    "jedi>=0.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
]

[project.scripts]
codeassistant = "codeassistant.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/codeassistant"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
